# reedsolomon-rs

./: .gitignore  .graphifyignore  Cargo.toml  HANDOFF.md  LICENSE-APACHE  README.md  run-tests.py
.github/workflows/: ci.yml  release.yml
docs/: AUDIT-2026-07-02.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: decode_target.rs  encode_target.rs  framed_target.rs
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_semantic_marker  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: gen_kat.py
src/: crc.rs  decode.rs  encode.rs  frame.rs  gf256.rs  lib.rs  poly.rs
tests/: edge.rs  framed.rs  kat.rs  kat_vectors.rs  kat_vectors_framed.rs  roundtrip.rs
